--- a/index.html
+++ b/index.html
@@ -4,37 +4,37 @@ layout: default
 
 
 <div class="heading" id="toc">
-  <h2>Table of contents</h2>
+  <h2>Sommaire</h2>
 </div>
 <div class="section toc">
   <div class="col">
     <h4><a href="#html">HTML</a></h4>
     <ul>
-      <li><a href="#html-syntax">Syntax</a></li>
+      <li><a href="#html-syntax">Syntaxe</a></li>
       <li><a href="#html-doctype">HTML5 doctype</a></li>
-      <li><a href="#html-encoding">Character encoding</a></li>
-      <li><a href="#html-style-script">CSS and JavaScript includes</a></li>
+      <li><a href="#html-encoding">Encodage</a></li>
+      <li><a href="#html-style-script">Inclusion de CSS et JavaScript</a></li>
       <li><a href="#html-practicality">Practicality over purity</a></li>
-      <li><a href="#html-attribute-order">Attribute order</a></li>
-      <li><a href="#html-boolean-attributes">Boolean attributes</a></li>
-      <li><a href="#html-reducing-markup">Reducing markup</a></li>
-      <li><a href="#html-javascript">JavaScript generated markup</a></li>
+      <li><a href="#html-attribute-order">Ordre des attributs</a></li>
+      <li><a href="#html-boolean-attributes">Attributs booléens</a></li>
+      <li><a href="#html-reducing-markup">Réduction du balisage</a></li>
+      <li><a href="#html-javascript">Balisé généré en JavaScript</a></li>
     </ul>
   </div>
   <div class="col">
     <h4><a href="#css">CSS</a></h4>
     <ul>
-      <li><a href="#css-syntax">CSS syntax</a></li>
-      <li><a href="#css-declaration-order">Declaration order</a></li>
-      <li><a href="#css-media-queries">Media query placement</a></li>
-      <li><a href="#css-prefixed-properties">Prefixed properties</a></li>
-      <li><a href="#css-single-declarations">Rules with single declarations</a></li>
-      <li><a href="#css-shorthand">Shorthand notation</a></li>
-      <li><a href="#css-nesting">Nesting in Less and Sass</a></li>
-      <li><a href="#css-comments">Comments</a></li>
+      <li><a href="#css-syntax">Syntaxe CSS</a></li>
+      <li><a href="#css-declaration-order">Ordre des déclarations</a></li>
+      <li><a href="#css-media-queries">Emplacement des média queries</a></li>
+      <li><a href="#css-prefixed-properties">Propriétés préfixées</a></li>
+      <li><a href="#css-single-declarations">Règles pour les déclarations uniques</a></li>
+      <li><a href="#css-shorthand">Notation raccourcie</a></li>
+      <li><a href="#css-nesting">Hierarchie avec Less et Sass</a></li>
+      <li><a href="#css-comments">Commentaires</a></li>
       <li><a href="#css-classes">Classes</a></li>
-      <li><a href="#css-selectors">Selectors</a></li>
-      <li><a href="#css-organization">Organization</a></li>
+      <li><a href="#css-selectors">Sélecteurs</a></li>
+      <li><a href="#css-organization">Organisation</a></li>
     </ul>
   </div>
 </div>
@@ -42,12 +42,12 @@ layout: default
 
 <div class="section" id="golden-rule">
   <div class="col">
-    <h2>Golden rule</h2>
-    <p>Enforce these, or your own, agreed upon guidelines at all times. Small or large, call out what's incorrect. For additions or contributions to this Code Guide, please <a href="https://github.com/mdo/code-guide/issues/new">open an issue on GitHub</a>.</p>
+    <h2>Règle d'or</h2>
+    <p>Appliquez vos règles, concepts et bonnes pratiques ou celles décrites sur cette page. Contribuer à ce <em>Code Guide</em> sur GitHub en <a href="https://github.com/mdo/code-guide/issues/new">créant un ticket</a></p>
   </div>
   <div class="col">
     <blockquote>
-      <p>Every line of code should appear to be written by a single person, no matter the number of contributors.</p>
+      <p>Tout le code doit semblé avoir été écrit par une seule personne, peu importe le nombre de contributeurs.</p>
     </blockquote>
   </div>
 </div>
@@ -60,13 +60,13 @@ layout: default
 
 <div class="section" id="html-syntax">
   <div class="col">
-    <h3>Syntax</h3>
+    <h3>Syntaxe</h3>
     <ul>
-      <li>Use soft tabs with two spaces—they're the only way to guarantee code renders the same in any environment.</li>
-      <li>Nested elements should be indented once (two spaces).</li>
-      <li>Always use double quotes, never single quotes, on attributes.</li>
-      <li>Don't include a trailing slash in self-closing elements—the <a href="http://dev.w3.org/html5/spec-author-view/syntax.html#syntax-start-tag">HTML5 spec</a> says they're optional.</li>
-      <li>Don’t omit optional closing tags (e.g. <code>&lt;/li&gt;</code> or <code>&lt;/body&gt;</code>).</li>
+      <li>Utilisez deux espaces pour des tabulations "douces". Afin de garantir un rendu identique dans tous les environnements.</li>
+      <li>Les éléments imbriqué doivent être indenté d'un cran (deux espaces).</li>
+      <li>Toujours utiliser les double guillemets pour les attributs.</li>
+      <li>Ne pas inclure la barre oblique des balises auto-fermantes. Les <a href="http://dev.w3.org/html5/spec-author-view/syntax.html#syntax-start-tag">spécifications HTML5</a> les définissent comme optionnels.</li>
+      <li>N'oubliez pas les balises fermantes optionnelles telles que <code>&lt;/li&gt;</code> ou <code>&lt;/body&gt;</code>.</li>
     </ul>
   </div>
   <div class="col">
@@ -76,8 +76,8 @@ layout: default
 
 <div class="section" id="html-doctype">
   <div class="col">
-    <h3>HTML5 doctype</h3>
-    <p>Enforce standards mode and more consistent rendering in every browser possible with this simple doctype at the beginning of every HTML page.</p>
+    <h3>Doctype HTML5</h3>
+    <p>Utiliser cette simple déclaration de Doctype au début de chaque page HTML permet un rendu optimum sur tous les navigateurs.</p>
   </div>
   <div class="col">
     {% highlight html %}{% include html/doctype.html %}{% endhighlight %}
@@ -86,8 +86,8 @@ layout: default
 
 <div class="section" id="html-encoding">
   <div class="col">
-    <h3>Character encoding</h3>
-    <p>Quickly and easily ensure proper rendering of your content by declaring an explicit character encoding.</p>
+    <h3>Encodage</h3>
+    <p>Utilisez ce type d'encodage pour vous assurer le meilleur rendu des charactères.</p>
   </div>
   <div class="col">
     {% highlight html %}{% include html/encoding.html %}{% endhighlight %}
